packages/typ/tests/fixtures/diagnostics/0839_polyvar_duplicate_tag_conflict_08.ml.infer.expected
File "0839_polyvar_duplicate_tag_conflict_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0839_polyvar_duplicate_tag_conflict_08 is not a valid module name.

File "0839_polyvar_duplicate_tag_conflict_08.ml", line 1, characters 16-42:
1 | let bad_theta : [ `A of int | `A of bool ] -> int =
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This variant type contains a constructor [ `A of bool ]
       which should be [ `A of int ]
